--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=SEM backend
+
+spring.datasource.url=jdbc:mysql://db:3306/sem_db
+spring.datasource.username=root
+spring.datasource.password=sem_service
+
+flyway.enabled=true
+flyway.url=jdbc:mysql://db:3306/sem_db
+flyway.user=root
+flyway.password=sem_service
