--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=SEM backend
 
-spring.datasource.url=jdbc:mysql://db:3306/sem_db
-spring.datasource.username=root
-spring.datasource.password=sem_service
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://db:3306/sem_db}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:sem_service}
 
 flyway.enabled=true
-flyway.url=jdbc:mysql://db:3306/sem_db
-flyway.user=root
-flyway.password=sem_service
+flyway.url=${FLYWAY_URL:jdbc:mysql://db:3306/sem_db}
+flyway.user=${FLYWAY_USER:root}
+flyway.password=${FLYWAY_PASSWORD:sem_service}
+flyway.locations=classpath:db/migration
