--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,6 +37,7 @@
 
 	"forwardPorts": [8080, 3306],
 	"postCreateCommand": "mvn dependency:go-offline",
+	"postStartCommand": "/workspace/script.sh",
 	"remoteUser": "vscode"
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
