--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,16 @@ spring.datasource.url=${MYSQL_URL:jdbc:mysql://db:3306/sem_db}
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:sem_service}
 
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.properties.hibernate.jdbc.batch_size=10
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
 flyway.enabled=true
 flyway.url=${FLYWAY_URL:jdbc:mysql://db:3306/sem_db}
 flyway.user=${FLYWAY_USER:root}
