--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 
 flyway.enabled=true
+flyway.baselineOnMigrate=true
 flyway.url=${FLYWAY_URL:jdbc:mysql://db:3306/sem_db}
 flyway.user=${FLYWAY_USER:root}
 flyway.password=${FLYWAY_PASSWORD:sem_service}
