authorization and authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.url=${MYSQL_URL:jdbc:mysql://db:3306/sem_db}
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:sem_service}
 
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -20,3 +19,13 @@ flyway.url=${FLYWAY_URL:jdbc:mysql://db:3306/sem_db}
 flyway.user=${FLYWAY_USER:root}
 flyway.password=${FLYWAY_PASSWORD:sem_service}
 flyway.locations=classpath:db/migration
+
+sem.app.jwtCookieName= sem-jwt
+sem.app.jwtRefreshCookieName= sem-jwt-refresh
+sem.app.jwtSecret= KM21abw7gQGputkldhuYfkUxqPDGuBwEcsdbrswcrbsvssvd
+sem.app.jwtExpirationMs= 86400000
+sem.app.jwtRefreshExpirationMs= 86400000
+
+## For test
+#sem.app.jwtExpirationMs= 60000
+#sem.app.jwtRefreshExpirationMs= 180000
