--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,35 @@
-spring.application.name=SEM backend
+# application.properties
+spring.application.name=SEM-Backend
 
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://db:3306/sem_db}
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:sem_service}
+# Database Configuration
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/sem_db}
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD}
 
-
+# JPA and Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=${SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${FORMAT_SQL:false}
 
-spring.jpa.properties.hibernate.jdbc.batch_size=10
+# Hibernate Performance Tuning
+spring.jpa.properties.hibernate.jdbc.batch_size=50
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 
-flyway.enabled=true
-flyway.baselineOnMigrate=true
-flyway.url=${FLYWAY_URL:jdbc:mysql://db:3306/sem_db}
-flyway.user=${FLYWAY_USER:root}
-flyway.password=${FLYWAY_PASSWORD:sem_service}
-flyway.locations=classpath:db/migration
+# Flyway Migration Configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.url=${FLYWAY_URL:jdbc:mysql://localhost:3306/sem_db}
+spring.flyway.user=${FLYWAY_USERNAME:root}
+spring.flyway.password=${FLYWAY_PASSWORD}
+spring.flyway.locations=classpath:db/migration
+
+# JWT Configuration
+spring.config.import=optional:file:secrets.properties
+
+spring.sem.jwt.cookie-name=auth-token
+spring.sem.jwt.secret-key=${JWT_SECRET_KEY}
+spring.sem.jwt.expiration-ms=${JWT_EXPIRATION:3600000}
+spring.sem.jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION:86400000}
+spring.sem.jwt.refresh-cookie-name=auth-refresh-token
