create API & improve performance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,6 @@ spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Hibernate Performance Tuning
 spring.jpa.properties.hibernate.jdbc.batch_size=50
@@ -30,3 +29,17 @@ spring.sem.jwt.secret-key=${JWT_SECRET_KEY:6wRh5kEIQ3Icf9LvzhTqwwQhuBilhtHK+Advj
 spring.sem.jwt.expiration-ms=${JWT_EXPIRATION:3600000}
 spring.sem.jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION:86400000}
 spring.sem.jwt.refresh-cookie-name=auth-refresh-token
+
+# Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dinhtruong1234lhp@gmail.com
+spring.mail.password=fbba wabg spwj dgyf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Task Executor Configuration
+spring.task.execution.pool.core-size=10
+spring.task.execution.pool.max-size=100
+spring.task.execution.pool.queue-capacity=50
+spring.task.execution.thread-name-prefix=task-
