--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,12 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    tty: true
+    stdin_open: true
     volumes:
       - .:/workspace:cached
       - /var/run/docker.sock:/var/run/docker.sock
+      - ~/.m2:/home/developer/.m2:cached  # Thêm volume cho maven cache
     environment:
       - MYSQL_URL=jdbc:mysql://db:3306/sem_db
       - MYSQL_USER=root
@@ -15,8 +18,17 @@ services:
       - FLYWAY_URL=jdbc:mysql://db:3306/sem_db
       - FLYWAY_USER=root
       - FLYWAY_PASSWORD=sem_service
+    healthcheck:  # Thêm healthcheck
+      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     depends_on:
-      - db
+      db:
+        condition: service_healthy  # Đảm bảo MySQL đã sẵn sàng
+      kafka:
+        condition: service_started
+
   db:
     image: mysql:8.0
     restart: unless-stopped
@@ -27,6 +39,12 @@ services:
       - MYSQL_DATABASE=sem_db
     ports:
       - "3306:3306"
+    healthcheck:  # Thêm healthcheck cho MySQL
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
   kafka:
     image: 'bitnami/kafka:latest'
     ports:
@@ -38,6 +56,16 @@ services:
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+    healthcheck:  # Thêm healthcheck cho Kafka
+      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+networks:
+  default:
+    driver: bridge  # Thêm network configuration
 
 volumes:
   mysql-data:
+    driver: local  # Chỉ định driver cho volume
