--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=SEM backend
 
 # Database Configuration
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/sem_db}
-spring.datasource.username=${MYSQL_USERNAME:root}
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/sem_db
+spring.datasource.username=root
+spring.datasource.password=sem_service
 
 # JPA and Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 
 # Flyway Migration Configuration
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.baseline-on-migrate=true
 spring.flyway.url=${FLYWAY_URL:jdbc:mysql://localhost:3306/sem_db}
 spring.flyway.user=${FLYWAY_USERNAME:root}
