--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,13 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.ocpsoft.prettytime</groupId>
+            <artifactId>prettytime</artifactId>
+            <version>5.0.9.Final</version>
+        </dependency>
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
