--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.sem.jwt.refresh-cookie-name=auth-refresh-token
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=dinhtruong1234lhp@gmail.com
-spring.mail.password=
+spring.mail.password=fbba wabg spwj dgyf
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
