--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=SEM backend
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/sem_db
-spring.datasource.username=root
-spring.datasource.password=sem_service
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/sem_db}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:sem_service}
 
 # JPA and Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # Hibernate Performance Tuning
@@ -19,8 +19,8 @@ spring.jpa.properties.hibernate.order_updates=true
 spring.flyway.enabled=false
 spring.flyway.baseline-on-migrate=true
 spring.flyway.url=${FLYWAY_URL:jdbc:mysql://localhost:3306/sem_db}
-spring.flyway.user=${FLYWAY_USERNAME:root}
-spring.flyway.password=${FLYWAY_PASSWORD}
+spring.flyway.user=${MYSQL_USER:root}
+spring.flyway.password=${MYSQL_PASSWORD:sem_service}
 spring.flyway.locations=classpath:db/migration
 
 # Jwt Configuration
@@ -34,7 +34,7 @@ spring.sem.jwt.refresh-cookie-name=auth-refresh-token
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=dinhtruong1234lhp@gmail.com
-spring.mail.password=
+spring.mail.password=fbba wabg spwj dgyf
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
