--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,16 +34,10 @@ spring.sem.jwt.refresh-cookie-name=auth-refresh-token
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=dinhtruong1234lhp@gmail.com
-spring.mail.password=fbba wabg spwj dgyf
+spring.mail.password=
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-#Task Executor Configuration
-spring.task.execution.pool.core-size=10
-spring.task.execution.pool.max-size=100
-spring.task.execution.pool.queue-capacity=50
-spring.task.execution.thread-name-prefix=task-
 
 # Kafka Configuration
 # Producer
