done new features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,8 @@ spring.kafka.consumer.group-id=notification_group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# cron expression configuration
+task.cron.expression=0 0 0 * * ?
+schedule.task.min_gap=15
+
