--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,6 +55,12 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 task.cron.expression=0 0 0 * * ?
 schedule.task.min_gap=15
 
+# File Upload Configuration
 spring.servlet.multipart.max-file-size=1GB
 spring.servlet.multipart.max-request-size=2GB
 upload.default.directory= /src/uploads
+spring.servlet.multipart.resolve-lazily=true
+
+# HDFS Configuration
+hadoop.hdfs.url=hdfs://localhost:9000
+hadoop.home.dir="C:/hadoop"
