--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,11 @@ services:
         condition: service_healthy  # Đảm bảo MySQL đã sẵn sàng
       kafka:
         condition: service_started
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 4G
 
   db:
     image: mysql:8.0
@@ -47,6 +52,11 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 2G
 
   mongodb:
     image: mongodb/mongodb-community-server:latest
@@ -81,6 +91,11 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 2G
 
 networks:
   default:
