--- a/src/main/java/org/example/sem_backend/modules/document_module/hadoop-cluster/docker-compose.yaml
+++ b/src/main/java/org/example/sem_backend/modules/document_module/hadoop-cluster/docker-compose.yaml
@@ -9,16 +9,18 @@ services:
       - ./config:/opt/hadoop/etc/hadoop
       - ./scripts/start-hdfs.sh:/start-hdfs.sh
     ports:
-      - "9870:9870"  # Web UI của Namenode
-      - "9000:9000"  # RPC của Namenode
+      - "9870:9870"
+      - "9000:9000"
+    environment:
+      - HADOOP_HOME=/opt/hadoop
+      - HADOOP_CONF_DIR=/opt/hadoop/etc/hadoop
     command: ["bash", "/start-hdfs.sh"]
     networks:
       hadoop_network:
-        ipv4_address: 172.20.0.2
 
   datanode_1:
     image: apache/hadoop:3.3.5
-    hostname: datanode-1
+#    hostname: localhost
     user: root
     volumes:
       - ./data/datanode1:/opt/hadoop/data/dataNode
@@ -27,13 +29,18 @@ services:
     depends_on:
       - namenode
     command: ["bash", "/init-datanode.sh"]
+    environment:
+      - HADOOP_HOME=/opt/hadoop
+      - HADOOP_CONF_DIR=/opt/hadoop/etc/hadoop
+    ports:
+      - "9864:9864"
+      - "9866:9866"
     networks:
       hadoop_network:
-        ipv4_address: 172.20.0.3
 
   datanode_2:
     image: apache/hadoop:3.3.5
-    hostname: datanode-2
+#    hostname: localhost
     user: root
     volumes:
       - ./data/datanode2:/opt/hadoop/data/dataNode
@@ -42,9 +49,14 @@ services:
     depends_on:
       - namenode
     command: ["bash", "/init-datanode.sh"]
+    environment:
+      - HADOOP_HOME=/opt/hadoop
+      - HADOOP_CONF_DIR=/opt/hadoop/etc/hadoop
+    ports:
+      - "9865:9865"
+      - "9867:9867"
     networks:
       hadoop_network:
-        ipv4_address: 172.20.0.4
 
   resourcemanager:
     image: apache/hadoop:3.3.5
@@ -59,7 +71,6 @@ services:
       - namenode
     networks:
       hadoop_network:
-        ipv4_address: 172.20.0.5
 
   nodemanager_1:
     image: apache/hadoop:3.3.5
@@ -72,7 +83,6 @@ services:
       - resourcemanager
     networks:
       hadoop_network:
-        ipv4_address: 172.20.0.6
 
   nodemanager_2:
     image: apache/hadoop:3.3.5
@@ -85,14 +95,10 @@ services:
       - resourcemanager
     networks:
       hadoop_network:
-        ipv4_address: 172.20.0.7
 
 networks:
   hadoop_network:
-    ipam:
-      driver: default
-      config:
-        - subnet: 172.20.0.0/16
+      driver: bridge
 
 volumes:
   namenode_data:
