--- a/src/main/java/org/example/sem_backend/modules/document_module/hadoop-cluster/docker-compose.yaml
+++ b/src/main/java/org/example/sem_backend/modules/document_module/hadoop-cluster/docker-compose.yaml
@@ -115,6 +115,9 @@ services:
 networks:
   hadoop_network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 192.168.1.9/24
 
 volumes:
   namenode_data:
