change hdfs file system to local file system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,9 +58,5 @@ schedule.task.min_gap=15
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=1GB
 spring.servlet.multipart.max-request-size=2GB
-upload.default.directory= /src/uploads
+upload.default.directory= E:/SEM backend/src/uploads
 spring.servlet.multipart.resolve-lazily=true
-
-# HDFS Configuration
-hadoop.hdfs.url=hdfs://localhost:9000
-hadoop.home.dir="C:/hadoop"
