update upload file async and parse data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,4 +59,5 @@ schedule.task.min_gap=15
 spring.servlet.multipart.max-file-size=1GB
 spring.servlet.multipart.max-request-size=2GB
 upload.default.directory= E:/SEM backend/src/uploads
+extracted.data.directory= /extracted_data
 spring.servlet.multipart.resolve-lazily=true
